# honeybot

./: .cursorrules  .env.example  .flake8  .gitignore  CLAUDE.md  README.md  ROADMAP.md  STATUS.md  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/honeypot_categories/: airdrop_drainer.yaml  bitcoin_investment.yaml  deepfake_kyc.yaml  defi_rug_pull.yaml  fake_exchange.yaml  impersonation.yaml  job_offer_scam.yaml  nft_mint.yaml  pig_butchering.yaml  ponzi_scheme.yaml  romance_scam.yaml  tech_support.yaml
docker/: Dockerfile
docs/: SECURITY.md
docs/planning/: setup-guide.html
docs/research/: signal-telegram-research-cz.md
scripts/: script.py  script_1.py
src/scaipot/: __init__.py  cli.py  main.py  mcp_server.py  orchestrator.py
src/scaipot/api/: __init__.py  auth.py  models.py  server.py
src/scaipot/bots/: __init__.py  base_adapter.py  signal_adapter.py  telegram_adapter.py
src/scaipot/fraud_detection/: __init__.py  indicators.py  pattern_detector.py  risk_scorer.py
src/scaipot/llm_engine/: __init__.py  claude_client.py  response_generator.py
src/scaipot/mcp_integration/: __init__.py  mcp_client.py
src/scaipot/reporting/: __init__.py  alerts.py  bitcoin_whoswho.py  report_generator.py
src/scaipot/storage/: db.py  session_manager.py
src/scaipot/utils/: config.py
templates/: scaipot-config-workflows  scaipot-core-modules  scaipot-github-readme  scaipot-tests-docs
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_claude_client.py  test_config.py  test_fraud_detection.py  test_llm_engine.py  test_orchestrator.py  test_response_generator.py  test_session_manager.py  test_telegram_adapter.py
